modifiche al bundle vite

--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "license": "ISC",
   "devDependencies": {
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
+    "lodash": "^4.17.21",
+    "normalize.css": "^8.0.1"
   }
 }
